--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -1,31 +1,64 @@
 .projects {
   padding: 80px 60px;
-  background: #f5f5f5;
 }
 
-.projects h2 {
-  font-size: 32px;
-  margin-bottom: 40px;
-}
-
-.project-list {
+.projects-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 25px;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 30px;
 }
 
 .project-card {
   background: white;
   padding: 25px;
-  border-radius: 8px;
+  border-radius: 12px;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+  transition: 0.25s ease;
+}
+
+.project-card:hover {
+  transform: translateY(-6px);
 }
 
 .project-card h3 {
-  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.project-card p {
+  color: #444;
+  margin-bottom: 15px;
 }
 
 .project-card a {
+  color: #64ffda;
   text-decoration: none;
-  color: #0a192f;
   font-weight: bold;
+}
+.project-card a {
+  color: #64ffda;
+  text-decoration: none;
+  font-weight: 600;
+  position: relative;
+  transition: 0.2s;
+}
+
+/* HOVER */
+.project-card a:hover {
+  color: #0a192f;
+}
+
+/* alt çizgi efekti */
+.project-card a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -3px;
+  width: 0%;
+  height: 2px;
+  background: #64ffda;
+  transition: 0.25s;
+}
+
+.project-card a:hover::after {
+  width: 100%;
 }
